Fixed bug on index.html where all featured box text was unreadable

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2931,6 +2931,7 @@
 		padding: 3em 0 3em 0;
 	}
 
-  section.box.feature *{
+  section.box.feature-grid *{
 		color: #fff;
+		text-align: center;
 	}
